# chatterbox-readaloud

./: .gitignore  README.md  chatterbox-setup.md  clipboard-readaloud-sprint.md  menubar.py  pyproject.toml
launchagents/: com.chatterbox.menubar.plist.tmpl  com.chatterbox.mlx-audio-server.plist.tmpl  com.chatterbox.ollama.plist.tmpl
readaloud/: __init__.py  clean.py  cli.py  clipboard.py  fetch.py  sanitize.py  speak.py  state.py
scripts/: install.sh  uninstall.sh
